--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "@types/uuid": "^9.0.1",
@@ -19,6 +20,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
