--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "@types/uuid": "^9.0.1",
+    "@types/validator": "^13.7.13",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
@@ -22,6 +23,10 @@
   "dependencies": {
     "axios": "^1.3.4",
     "express": "^4.18.2",
+    "mysql2": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.29.0",
+    "sequelize-typescript": "^2.1.5",
     "uuid": "^9.0.0"
   }
 }
