--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "rootDir": "./src",                             
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,                       
+    "esModuleInterop": true,   
+    "experimentalDecorators": true, 
+    "emitDecoratorMetadata": true             
   },
   "exclude":[
     "./node_modules"
